# WS2812B-controller

./: CMakeLists.txt  partitions.csv
Project documentation/: Sistema de Decorado Domestico con Consumo Responsable.docx  Test  Project.xlsx
components/Current_Sensor/: acs712.c  acs712.h
components/adc/: adc.c  adc.h
components/color_manager/: color_manager.c  color_manager.h
components/display/: display.c  display.h
components/http_server/: http_server.c
components/led_strip/: led_strip.c  led_strip.h
components/led_strip_encoder/: led_strip_encoder.c
components/pattern_generator/: pattern_generator.c  pattern_generator.h
components/ssd1306/: ssd1306_fonts.h
components/tasks_common/: tasks_common.h
components/uart/: uart.c  uart.h
components/wifi_app/: wifi_app.c  wifi_app.h
main/: CMakeLists.txt  main.c
webpage/: app.css  app.js  index.html
