idf_component_register(SRCS 
        "main.c" 
        "../components/wifi_app/wifi_app.c" 
        "../components/http_server/http_server.c" 
        "../components/adc/adc.c" 
        "../components/uart/uart.c" 
        "../components/led_strip/led_strip.c" 
        "../components/led_strip_encoder/led_strip_encoder.c" 
        "../components/pattern_generator/pattern_generator.c" 
        "../components/color_manager/color_manager.c" 
        "../components/current_sensor/acs712.c"
        "../components/ssd1306/ssd1306.c"
        "../components/ssd1306/ssd1306_fonts.c"
    INCLUDE_DIRS 
        "." 
        "../components/wifi_app"
        "../components/http_server"
        "../components/adc"
        "../components/uart"
        "../components/tasks_common"
        "../components/led_strip"
        "../components/led_strip_encoder"
        "../components/pattern_generator"
        "../components/color_manager"
        "../components/current_sensor"
        "../components/ssd1306"
                    EMBED_FILES ../webpage/app.css ../webpage/app.js ../webpage/favicon.ico ../webpage/index.html)
